--- a/src/app.html
+++ b/src/app.html
@@ -8,5 +8,6 @@
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script async defer src="/ping.js"></script>
 	</body>
 </html>
